Fixed table alignment

--- a/src/pages/Display.module.css
+++ b/src/pages/Display.module.css
@@ -44,3 +44,7 @@
   text-align: center;
   padding-bottom: 30px;
 }
+
+.container table {
+  vertical-align: middle;
+}
